# spirit-island-solver

./: Cargo.toml  README.md
configurations/: impossible.yaml
src/: base.rs  core.rs  main.rs  solve.rs
src/base/: board.rs  concept.rs  decision.rs  deck.rs  default_adversary.rs  effect.rs  game.rs  piece.rs  rng.rs  spirit.rs  step.rs
src/base/decision/: card_play.rs  cascade_blight.rs  do_damage.rs  growth.rs  meta.rs  move_piece.rs
src/base/deck/: fear.rs  invader.rs  power.rs
src/base/effect/: add_piece.rs  do_damage.rs  fear.rs  growth.rs  invader_action.rs  meta.rs  persist.rs  remove_piece.rs  spirit.rs
src/core/: board.rs  fear.rs  power.rs  spirit.rs
src/core/power/: major.rs  minor.rs
src/core/spirit/: lightning.rs  river.rs
