[package]
name = "spirit-island-solver"
version = "0.1.0"
authors = ["Mason Bially <mason.bially@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.2"
rand = "0.7"
rand_chacha = "0.2.1"
rust-crypto = "^0.2"
clap = "~2.33.0"